# style-sensitive-word-vectors

./: CMakeLists.txt  distance_stylevec.c  word2stylevec.c
